@@ -1,7 +1,7 @@
 PREFIX : <http://example/>
 PREFIX rdf:    <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
 
-SELECT ?p
+SELECT (1 AS ?p)
 {
     ?x rdf:type :X .
     OPTIONAL { ?x :noSuch ?z }
