@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
-<sparql
-    xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-    xmlns:xs="http://www.w3.org/2001/XMLSchema#"
-    xmlns="http://www.w3.org/2005/sparql-results#" >
+<sparql xmlns="http://www.w3.org/2005/sparql-results#">
   <head>
     <variable name="p"/>
   </head>
   <results>
     <result>
+      <binding name="p">
+        <literal datatype="http://www.w3.org/2001/XMLSchema#integer">1</literal>
+      </binding>
     </result>
   </results>
 </sparql>
