@@ -3,11 +3,12 @@ ChangeLog for ARQ
 
 ==== ARQ 2.8.8 or 2.9.0
 
+
 + Bug fix: RIOT: Cope with UTF-8 files with a BOM.
 
 + Add scope checking rules as required by SPARQL 1.1
-  Illeagl in SPARQL 1.1:
-     Reuse of variables in assignments is illegal
+  Illegal in SPARQL 1.1:
+     Reuse of variables in assignments (i.e. "AS ?x" and ?x potentially bound)
      SELECT * {} GROUP BY (reamins legal in ARQ language)
 
 + Bug fix: FILTERs did not always get moved to the end of groups properly 
